# RC-and-RL-Calculator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  build_exe.py  main.py  pyproject.toml  requirements.txt  testt.py
.github/workflows/: ci.yml  docs.yml
core/: __init__.py  calculations.py
docs/: README.md  conf.py  examples.md  index.rst
docs/api/: core.rst  gui.rst  modules.rst
examples/: basic_rc_circuit.py  rc_config.json  rl_config.json  run_rc_example.py  run_rl_example.py
gui/: __init__.py  app.py
rc_rl_calculator/: __init__.py  cli.py  main.py
rc_rl_calculator/gui/: app.py
src/rc_rl_calculator/: __main__.py  cli.py  main.py
src/rc_rl_calculator/core/: __init__.py  calculations.py
src/rc_rl_calculator/gui/: app.py
tests/: conftest.py  test_calculations.py  test_cli.py  test_gui_pure.py
