[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rc-rl-calculator"
version = "0.1.0"
description = "RC and RL circuit calculator"
authors = [{ name = "RC-RL Calculator Team" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "matplotlib",
    "ttkbootstrap",
]

[project.optional-dependencies]
build = ["pyinstaller"]

[project.scripts]
"rc-rl-calc" = "rc_rl_calculator.cli:main"
"rc-rl-gui" = "rc_rl_calculator.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "--cov=rc_rl_calculator.cli --cov=rc_rl_calculator.core --cov-report=term-missing --cov-report=xml --cov-fail-under=65"
